# deepSI_lite

./: .gitignore  LICENSE  README.md  SUBNET.py  pyproject.toml  requirements.txt  setup.py
deepSI_lite/: SUBNET.py  __init__.py  fitting.py  models.py  networks.py  normalization.py
examples/: Demonstration deepSI_lite.ipynb  The shap bits of deepSI_lite.ipynb  Wiener-Hammerstein-SUBNET.py  pHNN demo.ipynb
examples/docs/: basic-example.py
testing/: WH-test.py  design-doc.py  pyproject.toml
