

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["deepSI_lite"]

[tool.poetry]
name = "deepSI_lite"
version = "0.1.0"
description = "Lightweight version of deepSI"
authors = ["Gerben I. Beintema <g.i.beintema@tue.nl>"]
license = "BSD 3-Clause"
