

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["deepSI_lite"]

[project]
name = "deepSI_lite"
version = "0.1.0"
description = "Lightweight version of deepSI"
maintainers = [
  {name = "Gerben I. Beintema"}
]
authors = [
  {name = "Gerben I. Beintema"}
]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}